tests/ui/lint/snapshots/try_block_no_success_path_none.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective `try` block
   ╭─[test.lis:4:5]
 3 │   let result: Option<int> = try {
 4 │     None?
   ·     ──┬──
   ·       ╰── always propagates
 5 │   };
   ╰────
  help: A `try` block is effective only if the expression may succeed or fail · code: [lint.try_block_no_success_path]
