tests/ui/lint/snapshots/type_limit_comparison_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:6:11]
 5 │   let b: Big = 5
 6 │   let _ = b > 65535
   ·           ────┬────
   ·               ╰── compares against the limit of the value's type
 7 │ }
   ╰────
  help: This compares against the limit of the value's type, so this comparison is always `false`. Did you mean to compare to a different value? · code: [lint.type_limit_comparison]
