tests/ui/lint/snapshots/type_limit_comparison_byte_max.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:4:11]
 3 │   let b: byte = 5
 4 │   let _ = b > 255
   ·           ───┬───
   ·              ╰── compares against the limit of the value's type
 5 │ }
   ╰────
  help: This compares against the limit of the value's type, so this comparison is always `false`. Did you mean to compare to a different value? · code: [lint.type_limit_comparison]
