tests/ui/lint/snapshots/type_limit_comparison_named_newtype.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always true
   ╭─[test.lis:6:11]
 5 │   let s = Small(5)
 6 │   let _ = s <= 255
   ·           ────┬───
   ·               ╰── compares against the limit of the value's type
 7 │ }
   ╰────
  help: This compares against the limit of the value's type, so this comparison is always `true`. Did you mean to compare to a different value? · code: [lint.type_limit_comparison]
