tests/ui/lint/snapshots/type_limit_comparison_uint8_le_max.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always true
   ╭─[test.lis:4:11]
 3 │   let a: uint8 = 5
 4 │   let _ = a <= 255
   ·           ────┬───
   ·               ╰── compares against the limit of the value's type
 5 │ }
   ╰────
  help: This compares against the limit of the value's type, so this comparison is always `true`. Did you mean to compare to a different value? · code: [lint.type_limit_comparison]
